--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,17 +4,17 @@
   Include:
   - @all_ratings.each do |rating|
     = rating
-    = check_box_tag "ratings[#{rating}]", 1, (true if @set_ratings[rating]), :id=>"ratings_#{rating}"
+    = check_box_tag "ratings[#{rating}]", 1, (true if @ratings[rating]), :id=>"ratings_#{rating}"
   = submit_tag 'Refresh', :id=>"ratings_submit"
   
 %table#movies.table.table-striped.col-md-12
   %thead
     %tr
       // %th Movie Title
-      %th{:class=>('hilite' if @sort_column =="title")}= link_to 'Movie Title', movies_path(:sort_by=>'title', :ratings=>@set_ratings), :id=>'title_header'
+      %th{:class=>('hilite' if @sort_by =="title")}= link_to 'Movie Title', movies_path(:sort_by=>'title', :ratings=>@ratings), :id=>'title_header'
       %th Rating
       // %th Release Date
-      %th{:class=>('hilite' if @sort_column =="release_date")}= link_to 'Release Date', movies_path(:sort_by=>'release_date', :ratings=>@set_ratings), :id=>'release_date_header'
+      %th{:class=>('hilite' if @sort_by =="release_date")}= link_to 'Release Date', movies_path(:sort_by=>'release_date', :ratings=>@ratings), :id=>'release_date_header'
 
       %th More Info
   %tbody
